# tb3-multibot-nav

./: CMakeLists.txt  README.md  package.xml
launch/: amcl.launch  gazebo.launch  move_base.launch  multinav.launch  nav.launch  onebot.launch  turtlebot3_navigation.launch  turtlebot3_remote.launch
maps/: map.pgm
param/: costmap_common_params_burger.yaml
rviz/: tb3_0.rviz  tb3_1.rviz  tb3_2.rviz
scripts/: SendGoal.py  SendPose.py
